# StereoscopicVolumeRenderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  makefile  makefiletest
src/: AABoundingBox.cpp  AABoundingBox.hpp  AnaglyphCamera.cpp  AnaglyphCamera.hpp  BCCLattice.cpp  BCCLattice.hpp  CCBSpline.cpp  CCBSpline.hpp  CCCatmullRom.cpp  CCCatmullRom.hpp  CCInterpolator.hpp  CCLattice.cpp  CCLattice.hpp  CCPrefilteredBSpline.cpp  CCPrefilteredBSpline.hpp  CCPremultipliedTrilinear.cpp  CCPremultipliedTrilinear.hpp  CCTrilinear.cpp  CCTrilinear.hpp  CCWindowSinc.cpp  CCWindowSinc.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraAbs.hpp  CameraFactory.cpp  CameraFactory.hpp  CameraModifier.cpp  CameraModifier.hpp  CameraModifierFactory.cpp  CameraModifierFactory.hpp  Caster.cpp  Caster.hpp  ColourAnaglyphCamera.cpp  ColourAnaglyphCamera.hpp  CrossEyeCamera.cpp  CrossEyeCamera.hpp  DuboisAnaglyphCamera.cpp  DuboisAnaglyphCamera.hpp  FCCLattice.cpp  (+162 more)
tests/: CMakeLists.txt  test_cc_premultiplied_trilinear.cpp  test_matrix_3d.cpp  test_window_sinc.cpp
